--- a/BlazorWebApp/Pages/Index.razor
+++ b/BlazorWebApp/Pages/Index.razor
@@ -1,8 +1,8 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Home Page</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Hello!</h1>
 
 Welcome to your new app.
 
