--- a/BlazorWebApp/Pages/Index.razor
+++ b/BlazorWebApp/Pages/Index.razor
@@ -1,3 +1,5 @@
 ﻿@page "/"
+@using global::Books.Entities
 
 <PageTitle>Home Page</PageTitle>
+<p><BookComponent Book="@(new Book(){Title = "XD"})"/></p>
