--- a/BlazorWebApp/Shared/BookComponent.razor.css
+++ b/BlazorWebApp/Shared/BookComponent.razor.css
@@ -56,6 +56,11 @@
     grid-column: 2;
     font-family: "Times New Roman", cursive;
     line-height: 20px;
-    font-size: 12px;
+    font-size: 14px;
     text-align: end;
+}
+.book-actions {
+    grid-row: 2;
+    grid-column: 1;
+    font-size: 12px;
 }
