Added Google Books API calls for fetching book details, fixed css for book display

--- a/BlazorWebApp/Pages/Books/Books.razor
+++ b/BlazorWebApp/Pages/Books/Books.razor
@@ -5,7 +5,7 @@
 @inject IMediator Mediator;
 <PageTitle>Books</PageTitle>
 
-<h1>My favourite books</h1>
+<h1>My favourite bookssss</h1>
 <p>Here is a list of my favourite books!</p>
 <table class="table">
     <tbody>
