Added fake google client, added MyBooksRepository with live data, google book details now instantly present on loading page

--- a/BlazorWebApp/Pages/Books/Books.razor
+++ b/BlazorWebApp/Pages/Books/Books.razor
@@ -13,7 +13,7 @@
     {
         var book = _books[i];
         <tr>
-            <td><BookComponent Title="@book.Title" ImageUrl="@book.ImageUrl" MyOpinion="@book.MyOpinion" Author="@book.Author"/></td>
+            <td><BookComponent GoogleId="@book.GoogleBookId" MyOpinion="@book.MyOpinion" /></td>
         </tr>
     }
     </tbody>
