--- a/BlazorWebApp/Shared/BookComponent.razor
+++ b/BlazorWebApp/Shared/BookComponent.razor
@@ -3,7 +3,11 @@
 @using MediatR
 @inject IMediator Mediator;
 <div class="book-layout">
-    @if (_showGoogleDetails)
+    @if (_googleBook == null)
+    {
+        <div>Loading..</div>
+    }
+    else
     {
         <div class="book-title">
             @_googleBook!.Title
@@ -12,7 +16,7 @@
             <img src="@_googleBook!.ThumbnailUrl" alt="pic"/>
         </div>
         <div class="book-description">
-            @((MarkupString)_googleBook!.Description)
+            @((MarkupString) _googleBook!.Description)
         </div>
         <div class="book-author">
             @if (_googleBook.Authors.Any())
@@ -20,59 +24,24 @@
                 <p>~@string.Join(", ", _googleBook.Authors)</p>
             }
         </div>
-        <div class="book-actions">
-            <button @onclick="HideDetails">Show default information</button>
-        </div>
-    }
-    else
-    {
-        <div class="book-title">
-            @Title
-        </div>
-        <div class="book-image">
-            <img src="@ImageUrl" alt="pic"/>
-        </div>
-        <div class="book-description">
-            @MyOpinion
-        </div>
-        <div class="book-author">
-            ~@Author
-        </div>
-        <div class="book-actions">
-            <button @onclick="async () => await ShowDetails()">Check Google Books</button>
-        </div>
     }
 </div>
 @code {
 
     [Parameter]
-    public string GoogleId { get; set; } = "ABD0xgEACAAJ";
-
-    [Parameter]
-    public string Title { get; set; } = "Title";
+    public string GoogleId { get; set; } = "some-id";
 
     [Parameter]
     public string MyOpinion { get; set; } = "Comment..";
 
-    [Parameter]
-    public string Author { get; set; } = "Name Surname";
-
-    [Parameter]
-    public string ImageUrl { get; set; } = "";
-
     private GoogleBookDto? _googleBook;
-    private bool _showGoogleDetails = false;
-    private async Task ShowDetails()
+    protected override async Task OnInitializedAsync()
     {
         if (_googleBook == null)
         {
             var bookRequest = new GetGoogleBookRequest(GoogleId);
             _googleBook = await Mediator.Send(bookRequest);
         }
-        _showGoogleDetails = true;
-    }
-    private void HideDetails()
-    {
-        _showGoogleDetails = false;
+        await base.OnInitializedAsync();
     }
 }
