--- a/BlazorWebApp/Pages/Books/BookDetailsDisplay.razor.css
+++ b/BlazorWebApp/Pages/Books/BookDetailsDisplay.razor.css
@@ -1,7 +1,7 @@
 ﻿.book-layout {
     display: grid;
     grid-template-rows: auto;
-    grid-template-columns: min-content fit-content(1200px);
+    grid-template-columns: min-content auto;
     grid-row-gap: 5px;
     grid-column-gap: 3px;
     justify-self: stretch;
@@ -10,12 +10,11 @@
     width: 320px;
     height: 480px;
 }
-.book-info-layout {
+.book-info {
+    grid-column: 2;
     display: grid;
-    grid-template-rows: auto auto auto auto fit-content(500px) auto;
 }
 .book-title {
-    grid-row: 1;
     font-size: 32px;
     font-family: "Arial Black", cursive;
     font-weight: bold;
@@ -23,7 +22,6 @@
     margin-left: 5px;
 }
 .book-subtitle {
-    grid-row: 2;
     margin-left: 5px;
     font-size: 24px;
     font-family: "Arial Black", cursive;
@@ -43,15 +41,17 @@
     font-family: "Times New Roman", sans-serif;
 }
 .book-description {
-    grid-row: 5;
     overflow-y: auto;
     font-family: "Times New Roman", sans-serif;
     font-size: 18px;
     text-align: left;
     overflow-wrap: break-word;
     text-justify: distribute;
-    margin-left: 15px;
+    margin-left: 10px;
     margin-top: 5px;
+    padding-left: 5px;
+    max-height: 500px;
+    border-left: 2px black solid;
 }
 .book-author {
     display: inline;
