--- a/BlazorWebApp/Shared/NavMenu.razor
+++ b/BlazorWebApp/Shared/NavMenu.razor
@@ -16,7 +16,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="books">
-                <span class="oi oi-plus" aria-hidden="true"></span> Books
+                <span class="oi oi-plus" aria-hidden="true"></span> MyBookshelf
             </NavLink>
         </div>
     </nav>
