--- a/BlazorWebApp/Pages/Books/BookEntryDisplay.razor
+++ b/BlazorWebApp/Pages/Books/BookEntryDisplay.razor
@@ -12,10 +12,10 @@
 else
 {
     <MudGrid>
-        <MudItem xs="10">
+        <MudItem lg="10" md="12">
             <BookDetailsDisplay BookDetails="BookEntry.BookDetails"/>
         </MudItem>
-        <MudItem xs="2">
+        <MudItem lg="2" md="12">
             <MudPaper Elevation="3" Class="d-flex flex-column align-center justify-center">
                 <MudText Typo="Typo.h4" Align="Align.Center" Class="object-fill">@BookEntry.MyOpinion</MudText>
                 <MudDivider DividerType="DividerType.FullWidth"/>
