--- a/BlazorWebApp/Shared/MainLayout.razor
+++ b/BlazorWebApp/Shared/MainLayout.razor
@@ -9,7 +9,7 @@
         <MudSpacer/>
         <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />
     </MudAppBar>
-    <MudDrawer Open="@_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
+    <MudDrawer @bind-Open="@_drawerOpen" ClipMode="DrawerClipMode.Never" Elevation="2" Variant="DrawerVariant.Responsive">
         <NavMenu/>
     </MudDrawer>
     <MudMainContent>
