--- a/BlazorWebApp/Shared/MainLayout.razor
+++ b/BlazorWebApp/Shared/MainLayout.razor
@@ -7,7 +7,7 @@
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
         <MudText Typo="Typo.h5">FSorek Home</MudText>
         <MudSpacer/>
-        <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />
+        <AccessControl />
     </MudAppBar>
     <MudDrawer @bind-Open="@_drawerOpen" ClipMode="DrawerClipMode.Never" Elevation="2" Variant="DrawerVariant.Responsive">
         <NavMenu/>
