--- a/BlazorWebApp/_Imports.razor
+++ b/BlazorWebApp/_Imports.razor
@@ -9,3 +9,5 @@
 @using BlazorWebApp
 @using BlazorWebApp.Shared
 @using MudBlazor
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
